test/error/scan/ExpectDQuote.mod
MODULE ExpectDQuote;

CONST s = "abc;

END ExpectDQuote.
